feat(completions): update some completions (#101)

--- a/completions/bun/language/en-US.json
+++ b/completions/bun/language/en-US.json
@@ -237,7 +237,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "Write a yarn.lock file. (yarn v1)"
           ]
         },
@@ -247,7 +247,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "Don't install devDependencies."
           ]
         },
@@ -281,7 +281,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Always request the latest versions from the registry & reinstall all dependencies."
           ]
         },
@@ -347,7 +347,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Install globally."
           ]
         },
@@ -399,7 +399,7 @@
             "--dev"
           ],
           "tip": [
-            "U: -d|--dev\n",
+            "U: -d, --dev\n",
             "Add dependency to \"devDependencies\"."
           ]
         },
@@ -415,7 +415,7 @@
             "--exact"
           ],
           "tip": [
-            "U: -E|--exact\n",
+            "U: -E, --exact\n",
             "Add the exact version instead of the ^range"
           ]
         }
@@ -438,7 +438,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "Write a yarn.lock file. (yarn v1)"
           ]
         },
@@ -448,7 +448,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "Don't uninstall devDependencies."
           ]
         },
@@ -482,7 +482,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Always request the latest versions from the registry & reinstall all dependencies."
           ]
         },
@@ -548,7 +548,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Uninstall globally."
           ]
         },
@@ -607,7 +607,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "Write a yarn.lock file. (yarn v1)"
           ]
         },
@@ -617,7 +617,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "Don't update devDependencies."
           ]
         },
@@ -651,7 +651,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Always request the latest versions from the registry & reinstall all dependencies."
           ]
         },
@@ -717,7 +717,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Update globally."
           ]
         },
@@ -777,7 +777,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "Write a yarn.lock file. (yarn v1)"
           ]
         },
@@ -787,7 +787,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "Don't link devDependencies."
           ]
         },
@@ -821,7 +821,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Always request the latest versions from the registry & reinstall all dependencies."
           ]
         },
@@ -887,7 +887,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Link globally."
           ]
         },
@@ -947,7 +947,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "Write a yarn.lock file. (yarn v1)"
           ]
         },
@@ -957,7 +957,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "Don't unlink devDependencies."
           ]
         },
@@ -991,7 +991,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Always request the latest versions from the registry & reinstall all dependencies."
           ]
         },
@@ -1057,7 +1057,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Unlink globally."
           ]
         },
@@ -1123,7 +1123,7 @@
                 "--global"
               ],
               "tip": [
-                "U: -g|--global\n",
+                "U: -g, --global\n",
                 "print the global bin folder"
               ]
             }
@@ -1376,7 +1376,7 @@
             "--yes"
           ],
           "tip": [
-            "U: -y|--yes\n",
+            "U: -y, --yes\n",
             "Accept all default options."
           ]
         }
@@ -1416,7 +1416,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Show current version of Bun."
       ]
     },
@@ -1434,7 +1434,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Print help text for command."
       ]
     },
@@ -1589,7 +1589,7 @@
         "--bun"
       ],
       "tip": [
-        "U: -b|--bun\n",
+        "U: -b, --bun\n",
         "Force a script or package to use Bun's runtime instead of Node.js (via symlinking node)."
       ]
     },
