--- a/completions/bun/language/zh-CN.json
+++ b/completions/bun/language/zh-CN.json
@@ -237,7 +237,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "生成 yarn.lock 文件 (yarn v1)。"
           ]
         },
@@ -247,7 +247,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "不安装 devDependencies。"
           ]
         },
@@ -281,7 +281,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "始终从注册表请求最新版本并重新安装所有依赖项。"
           ]
         },
@@ -347,7 +347,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局安装。"
           ]
         },
@@ -399,7 +399,7 @@
             "--dev"
           ],
           "tip": [
-            "U: -d|--dev\n",
+            "U: -d, --dev\n",
             "将依赖项添加到 \"devDependencies\"。"
           ]
         },
@@ -415,7 +415,7 @@
             "--exact"
           ],
           "tip": [
-            "U: -E|--exact\n",
+            "U: -E, --exact\n",
             "添加精确版本而不是 ^range。"
           ]
         }
@@ -438,7 +438,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "生成 yarn.lock 文件。 (yarn v1)"
           ]
         },
@@ -448,7 +448,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "不卸载 devDependencies。"
           ]
         },
@@ -482,7 +482,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "始终从注册表请求最新版本并重新安装所有依赖项。"
           ]
         },
@@ -548,7 +548,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局卸载。"
           ]
         },
@@ -608,7 +608,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "生成 yarn.lock 文件。 (yarn v1)"
           ]
         },
@@ -618,7 +618,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "不更新 devDependencies。"
           ]
         },
@@ -652,7 +652,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "始终从注册表请求最新版本并重新安装所有依赖项。"
           ]
         },
@@ -718,7 +718,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局更新。"
           ]
         },
@@ -778,7 +778,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "生成 yarn.lock 文件 (yarn v1)。"
           ]
         },
@@ -788,7 +788,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "不链接 devDependencies。"
           ]
         },
@@ -822,7 +822,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "始终从注册表请求最新版本并重新安装所有依赖项。"
           ]
         },
@@ -888,7 +888,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局链接。"
           ]
         },
@@ -948,7 +948,7 @@
             "--yarn"
           ],
           "tip": [
-            "U: -y|--yarn\n",
+            "U: -y, --yarn\n",
             "生成 yarn.lock 文件。 (yarn v1)"
           ]
         },
@@ -958,7 +958,7 @@
             "--production"
           ],
           "tip": [
-            "U: -p|--production\n",
+            "U: -p, --production\n",
             "不取消链接 devDependencies。"
           ]
         },
@@ -992,7 +992,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "始终从注册表请求最新版本并重新安装所有依赖项。"
           ]
         },
@@ -1058,7 +1058,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局取消链接。"
           ]
         },
@@ -1124,7 +1124,7 @@
                 "--global"
               ],
               "tip": [
-                "U: -g|--global\n",
+                "U: -g, --global\n",
                 "打印全局 bin 文件夹的路径。"
               ]
             }
@@ -1379,7 +1379,7 @@
             "--yes"
           ],
           "tip": [
-            "U: -y|--yes\n",
+            "U: -y, --yes\n",
             "接受所有默认选项。"
           ]
         }
@@ -1419,7 +1419,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "显示当前 Bun 的版本。"
       ]
     },
@@ -1437,7 +1437,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "打印命令的帮助文本。"
       ]
     },
@@ -1592,7 +1592,7 @@
         "--bun"
       ],
       "tip": [
-        "U: -b|--bun\n",
+        "U: -b, --bun\n",
         "强制脚本或包使用 Bun 的运行时, 而不是 Node.js (通过符号链接 node)。"
       ]
     },
