--- a/completions/cargo/language/en-US.json
+++ b/completions/cargo/language/en-US.json
@@ -177,7 +177,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Build artifacts in release mode, with optimizations."
           ]
         },
@@ -411,7 +411,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Check artifacts in release mode, with optimizations."
           ]
         },
@@ -483,7 +483,7 @@
             "r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Whether or not to clean release artifacts."
           ]
         },
@@ -668,7 +668,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Document artifacts in release mode, with optimizations."
           ]
         },
@@ -1168,7 +1168,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Run artifacts in release mode, with optimizations."
           ]
         },
@@ -1420,7 +1420,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Test artifacts in release mode, with optimizations."
           ]
         },
@@ -1712,7 +1712,7 @@
             "-w"
           ],
           "tip": [
-            "U: --workspace|-w\n",
+            "U: --workspace, -w\n",
             "Only update the workspace packages."
           ]
         },
@@ -1971,7 +1971,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "Force overwriting existing crates or binaries."
           ]
         },
@@ -2456,7 +2456,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Fix artifacts in release mode, with optimizations."
           ]
         },
@@ -2700,7 +2700,7 @@
             "-l"
           ],
           "tip": [
-            "U: --list|-l\n",
+            "U: --list, -l\n",
             "List owners of a crate."
           ]
         },
@@ -2742,7 +2742,7 @@
             "-l"
           ],
           "tip": [
-            "U: --list|-l\n",
+            "U: --list, -l\n",
             "Print files included in a package without making one."
           ]
         },
@@ -3075,7 +3075,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Build artifacts in release mode, with optimizations."
           ]
         },
@@ -3277,7 +3277,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "Build artifacts in release mode, with optimizations."
           ]
         },
@@ -3326,7 +3326,7 @@
             "-e"
           ],
           "tip": [
-            "U: --edges|-e\n",
+            "U: --edges, -e\n",
             "The kinds of dependencies to display (features,normal,build,dev,all,no-normal,no-build,no-dev,no-proc-macro)"
           ],
           "next": [
@@ -3366,7 +3366,7 @@
           ],
           "next": 0,
           "tip": [
-            "U: --invert|-i\n",
+            "U: --invert, -i\n",
             "Invert the tree direction and focus on the given package."
           ]
         },
@@ -3415,7 +3415,7 @@
             "-d"
           ],
           "tip": [
-            "U: --duplicates|-d\n",
+            "U: --duplicates, -d\n",
             "Show only dependencies which come in multiple versions (implies -i)"
           ]
         },
@@ -3599,7 +3599,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "Print version info and exit."
       ]
     }
@@ -3633,7 +3633,7 @@
         "-v"
       ],
       "tip": [
-        "U: --verbose|-v\n",
+        "U: --verbose, -v\n",
         "Use verbose output (-vv very verbose/build.rs output)"
       ]
     },
@@ -3649,7 +3649,7 @@
         "-q"
       ],
       "tip": [
-        "U: --quiet|-q\n",
+        "U: --quiet, -q\n",
         "Do not print cargo log messages"
       ]
     },
@@ -3710,7 +3710,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "Print help information."
       ]
     }
