--- a/completions/cargo/language/zh-CN.json
+++ b/completions/cargo/language/zh-CN.json
@@ -177,7 +177,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以发布模式构建工件, 带有优化。"
           ]
         },
@@ -411,7 +411,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以发布模式检查工件, 带有优化。"
           ]
         },
@@ -483,7 +483,7 @@
             "r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "是否清理发布工件。"
           ]
         },
@@ -668,7 +668,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化的发布模式文档化工件。"
           ]
         },
@@ -1168,7 +1168,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化模式运行工件。"
           ]
         },
@@ -1420,7 +1420,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化模式运行测试工件。"
           ]
         },
@@ -1712,7 +1712,7 @@
             "-w"
           ],
           "tip": [
-            "U: --workspace|-w\n",
+            "U: --workspace, -w\n",
             "仅更新工作区中的包。"
           ]
         },
@@ -1971,7 +1971,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "强制覆盖现有 crate 或二进制文件。"
           ]
         },
@@ -2456,7 +2456,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化的发布模式修复构件。"
           ]
         },
@@ -2700,7 +2700,7 @@
             "-l"
           ],
           "tip": [
-            "U: --list|-l\n",
+            "U: --list, -l\n",
             "列出 crate 的所有者。"
           ]
         },
@@ -2742,7 +2742,7 @@
             "-l"
           ],
           "tip": [
-            "U: --list|-l\n",
+            "U: --list, -l\n",
             "打印包含在包中的文件列表, 而不生成包。"
           ]
         },
@@ -3075,7 +3075,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化模式构建工件(发布模式)。"
           ]
         },
@@ -3277,7 +3277,7 @@
             "-r"
           ],
           "tip": [
-            "U: --release|-r\n",
+            "U: --release, -r\n",
             "以优化模式构建工件(发布模式)。"
           ]
         },
@@ -3326,7 +3326,7 @@
             "-e"
           ],
           "tip": [
-            "U: --edges|-e\n",
+            "U: --edges, -e\n",
             "显示依赖关系的类型(features,normal,build,dev,all,no-normal,no-build,no-dev,no-proc-macro)。"
           ],
           "next": [
@@ -3366,7 +3366,7 @@
           ],
           "next": 0,
           "tip": [
-            "U: --invert|-i\n",
+            "U: --invert, -i\n",
             "反转树的方向并专注于给定的包。"
           ]
         },
@@ -3415,7 +3415,7 @@
             "-d"
           ],
           "tip": [
-            "U: --duplicates|-d\n",
+            "U: --duplicates, -d\n",
             "只显示多个版本依赖关系(隐含 -i)。"
           ]
         },
@@ -3599,7 +3599,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "打印 Cargo 版本信息。"
       ]
     }
@@ -3633,7 +3633,7 @@
         "-v"
       ],
       "tip": [
-        "U: --verbose|-v\n",
+        "U: --verbose, -v\n",
         "使用详细输出 (-vv 极其详细/build.rs 输出)。"
       ]
     },
@@ -3649,7 +3649,7 @@
         "-q"
       ],
       "tip": [
-        "U: --quiet|-q\n",
+        "U: --quiet, -q\n",
         "不打印 Cargo 日志消息。"
       ]
     },
@@ -3710,7 +3710,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "打印帮助信息。"
       ]
     }
