--- a/completions/choco/language/en-US.json
+++ b/completions/choco/language/en-US.json
@@ -169,7 +169,7 @@
         "-v"
       ],
       "tip": [
-        "U: --version|-v\n",
+        "U: --version, -v\n",
         "Prints out the Chocolatey version."
       ]
     }
