--- a/completions/choco/language/zh-CN.json
+++ b/completions/choco/language/zh-CN.json
@@ -170,7 +170,7 @@
         "-v"
       ],
       "tip": [
-        "U: --version|-v\n",
+        "U: --version, -v\n",
         "打印出 Chocolatey 版本。"
       ]
     }
