--- a/completions/conda/language/en-US.json
+++ b/completions/conda/language/en-US.json
@@ -142,7 +142,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "Show the conda version number and exit."
       ]
     }
@@ -154,7 +154,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
 
         "Show help."
       ]
@@ -165,7 +165,7 @@
         "-v"
       ],
       "tip": [
-        "U: --verbose|-v\n",
+        "U: --verbose, -v\n",
         "Can be used multiple times. Once for detailed output, twice for INFO logging, thrice for DEBUG logging, four times for TRACE logging."
       ]
     },
