--- a/completions/deno/language/en-US.json
+++ b/completions/deno/language/en-US.json
@@ -1345,7 +1345,7 @@
             "-p"
           ],
           "tip": [
-            "U: --print|-p\n",
+            "U: --print, -p\n",
             "print result to stdout."
           ]
         },
@@ -1567,7 +1567,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "Forcefully overwrite existing installation."
           ]
         },
@@ -2641,7 +2641,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "Replace current exe even if not out-of-date."
           ]
         },
@@ -2723,7 +2723,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "Forcefully overwrite conflicting files in existing output directory."
           ]
         },
@@ -2755,7 +2755,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "Print version."
       ]
     }
@@ -2767,7 +2767,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "Print help."
       ]
     },
@@ -2777,7 +2777,7 @@
         "-q"
       ],
       "tip": [
-        "U: --quiet|-q\n",
+        "U: --quiet, -q\n",
         "Suppress diagnostic output."
       ]
     },
@@ -2818,7 +2818,7 @@
       "Specify the configuration file."
     ],
     "__reload": [
-      "U: --reload|-r\n",
+      "U: --reload, -r\n",
       "Reload source code cache (recompile TypeScript)"
     ],
     "__lock": [
@@ -2891,7 +2891,7 @@
       "Note: this can prevent timing attacks and fingerprinting."
     ],
     "__allow_all": [
-      "U: --allow-all|-A\n",
+      "U: --allow-all, -A\n",
       "Allow all permissions."
     ],
     "__inspect": "Activate inspector on host:port (default: 127.0.0.1:9229)",
