--- a/completions/deno/language/zh-CN.json
+++ b/completions/deno/language/zh-CN.json
@@ -1345,7 +1345,7 @@
             "-p"
           ],
           "tip": [
-            "U: --print|-p\n",
+            "U: --print, -p\n",
             "将结果打印到标准输出"
           ]
         },
@@ -1567,7 +1567,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "强制覆盖现有安装"
           ]
         },
@@ -2641,7 +2641,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "即使没有过期, 也要替换当前的 exe"
           ]
         },
@@ -2723,7 +2723,7 @@
             "-f"
           ],
           "tip": [
-            "U: --force|-f\n",
+            "U: --force, -f\n",
             "强制覆盖现有输出目录中的冲突文件"
           ]
         },
@@ -2755,7 +2755,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "打印 deno 版本信息"
       ]
     }
@@ -2767,7 +2767,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "显示帮助信息。"
       ]
     },
@@ -2777,7 +2777,7 @@
         "-q"
       ],
       "tip": [
-        "U: --quiet|-q\n",
+        "U: --quiet, -q\n",
         "抑制诊断输出"
       ]
     },
@@ -2818,7 +2818,7 @@
       "指定配置文件"
     ],
     "__reload": [
-      "U: --reload|-r\n",
+      "U: --reload, -r\n",
       "重新加载源代码缓存(重新编译 TypeScript)"
     ],
     "__lock": [
@@ -2891,7 +2891,7 @@
       "注意: 这可以防止定时攻击和指纹识别"
     ],
     "__allow_all": [
-      "U: --allow-all|-A\n",
+      "U: --allow-all, -A\n",
       "允许所有权限"
     ],
     "__inspect": "在 host: port 上激活检查器(默认: 127.0.0.1:9229)",
