--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -13,7 +13,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "Only print error and warning messages; all other output will be suppressed."
           ]
         },
@@ -337,7 +337,7 @@
             "--all"
           ],
           "tip": [
-            "U: -A|--all\n",
+            "U: -A, --all\n",
             "Add all changes in the current working tree (including new, modified, and deleted files) to the index."
           ]
         },
@@ -347,7 +347,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Allow adding ignored files."
           ]
         },
@@ -357,7 +357,7 @@
             "--interactive"
           ],
           "tip": [
-            "U: -i|--interactive\n",
+            "U: -i, --interactive\n",
             "Interactively add modified content from the working tree to the index."
           ]
         },
@@ -367,7 +367,7 @@
             "--patch"
           ],
           "tip": [
-            "U: -p|--patch\n",
+            "U: -p, --patch\n",
             "Interactively choose chunks of content between the index and the working tree to add to the index.\n",
             "Similar to git add -i but skips the initial command menu and goes directly to the patch subcommand."
           ]
@@ -378,7 +378,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "Open the diff and the index in an editor for further editing."
           ]
         },
@@ -388,7 +388,7 @@
             "--update"
           ],
           "tip": [
-            "U: -u|--update\n",
+            "U: -u, --update\n",
             "It will stage modifications and deletions of tracked files (files already in the Git repository) to the staging area, but it does not stage new files."
           ]
         },
@@ -428,7 +428,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "Automatically stage changes to tracked files in the index."
           ]
         },
@@ -438,7 +438,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "Launch an editor to edit the commit message."
           ]
         },
@@ -508,7 +508,7 @@
             "--patch"
           ],
           "tip": [
-            "U: -p|--patch\n",
+            "U: -p, --patch\n",
             "Interactively choose which changes to commit."
           ]
         },
@@ -643,7 +643,7 @@
             "--short"
           ],
           "tip": [
-            "U: -s|--short\n",
+            "U: -s, --short\n",
             "Show the output in a short format."
           ]
         },
@@ -653,7 +653,7 @@
             "--branch"
           ],
           "tip": [
-            "U: -b|--branch\n",
+            "U: -b, --branch\n",
             "Show branch and tracking information, even in short format."
           ]
         },
@@ -669,7 +669,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "Show additional text changes to be committed."
           ]
         },
@@ -807,7 +807,7 @@
             "--interactive"
           ],
           "tip": [
-            "U: -i|--interactive\n",
+            "U: -i, --interactive\n",
             "Allows interactive rebase, enabling editing, merging, deleting, and more for each commit."
           ],
           "next": []
@@ -1512,7 +1512,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "Edit the configuration for the current repository."
           ]
         },
@@ -1886,7 +1886,7 @@
             "--resolved"
           ],
           "tip": [
-            "U: --continue|--resolved\n",
+            "U: --continue, --resolved\n",
             "Continue applying patches (you should have resolved conflicts before using this command)."
           ]
         },
@@ -1938,7 +1938,7 @@
             "--human-readable"
           ],
           "tip": [
-            "U: -H|--human-readable\n",
+            "U: -H, --human-readable\n",
             "Print sizes in human-readable format."
           ]
         },
@@ -1948,7 +1948,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "Also report the number of packed objects and objects that can be removed."
           ]
         }
@@ -3511,7 +3511,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "Prints the synopsis and a list of the most commonly used commands.\n",
         "If the option --all or -a is given then all available commands are printed.\n",
         "If a Git command is named this option will bring up the manual page for that command."
