--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -13,7 +13,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "仅打印错误和警告消息；所有其他输出将不会显示。"
           ]
         },
@@ -336,7 +336,7 @@
             "--all"
           ],
           "tip": [
-            "U: -A|--all\n",
+            "U: -A, --all\n",
             "将当前工作树中的所有更改(包括新文件、修改过的文件和删除的文件)添加到索引中"
           ]
         },
@@ -346,7 +346,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "允许添加被忽略的文件"
           ]
         },
@@ -356,7 +356,7 @@
             "--interactive"
           ],
           "tip": [
-            "U: -i|--interactive\n",
+            "U: -i, --interactive\n",
             "交互式地将工作树中修改的内容添加到索引中"
           ]
         },
@@ -366,7 +366,7 @@
             "--patch"
           ],
           "tip": [
-            "U: -p|--patch\n",
+            "U: -p, --patch\n",
             "交互式地在索引和工作树之间选择内容块添加到索引中\n",
             "类似于 git add -i, 但跳过初始命令菜单, 直接进入补丁子命令"
           ]
@@ -377,7 +377,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "打开差异和索引在编辑器中进行进一步编辑"
           ]
         },
@@ -387,7 +387,7 @@
             "--update"
           ],
           "tip": [
-            "U: -u|--update\n",
+            "U: -u, --update\n",
             "将工作区中已追踪的文件（已存在于 Git 仓库中的文件）的修改和删除操作添加到暂存区，但不会添加新文件。"
           ]
         },
@@ -427,7 +427,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "自动将跟踪文件的更改暂存到索引中"
           ]
         },
@@ -437,7 +437,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "启动编辑器编辑提交信息"
           ]
         },
@@ -508,7 +508,7 @@
             "--patch"
           ],
           "tip": [
-            "U: -p|--patch\n",
+            "U: -p, --patch\n",
             "交互式地选择要提交的更改"
           ]
         },
@@ -641,7 +641,7 @@
             "--short"
           ],
           "tip": [
-            "U: -s|--short\n",
+            "U: -s, --short\n",
             "以短格式显示输出"
           ]
         },
@@ -651,7 +651,7 @@
             "--branch"
           ],
           "tip": [
-            "U: -b|--branch\n",
+            "U: -b, --branch\n",
             "即使是在短格式中也显示分支和跟踪信息"
           ]
         },
@@ -667,7 +667,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "显示将要提交的额外文本更改"
           ]
         },
@@ -805,7 +805,7 @@
             "--interactive"
           ],
           "tip": [
-            "U: -i|--interactive\n",
+            "U: -i, --interactive\n",
             "允许交互式 rebase, 为每个提交启用编辑、合并、删除等功能。"
           ],
           "next": []
@@ -1511,7 +1511,7 @@
             "--edit"
           ],
           "tip": [
-            "U: -e|--edit\n",
+            "U: -e, --edit\n",
             "编辑当前仓库的配置。"
           ]
         },
@@ -1883,7 +1883,7 @@
             "--resolved"
           ],
           "tip": [
-            "U: --continue|--resolved\n",
+            "U: --continue, --resolved\n",
             "继续应用补丁(在使用此命令之前应已解决冲突)。"
           ]
         },
@@ -1935,7 +1935,7 @@
             "--human-readable"
           ],
           "tip": [
-            "U: -H|--human-readable\n",
+            "U: -H, --human-readable\n",
             "以人类可读的格式打印大小。"
           ]
         },
@@ -1945,7 +1945,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "同时报告已打包的对象数量和可以移除的对象数量。"
           ]
         }
@@ -3507,7 +3507,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "打印概要和最常用的命令列表。\n",
         "如果给出选项 --all 或 -a，则打印所有可用的命令。\n",
         "如果给出某个命令，该选项将调出该命令的手册页面。"
