--- a/completions/npm/language/en-US.json
+++ b/completions/npm/language/en-US.json
@@ -17,7 +17,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Install package globally."
           ]
         },
@@ -27,7 +27,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "Write to the dependencies of package.json."
           ]
         },
@@ -37,7 +37,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "Write to the devDependencies of package.json."
           ]
         }
@@ -57,7 +57,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Uninstall package globally."
           ]
         },
@@ -67,7 +67,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "Remove from the dependencies of package.json."
           ]
         },
@@ -77,7 +77,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "Remove from the devDependencies of package.json."
           ]
         }
@@ -97,7 +97,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Update package globally."
           ]
         },
@@ -107,7 +107,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "Update the dependencies of package.json."
           ]
         },
@@ -117,7 +117,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "Update the devDependencies of package.json."
           ]
         }
@@ -152,7 +152,7 @@
             "--yes"
           ],
           "tip": [
-            "U: -y|--yes\n",
+            "U: -y, --yes\n",
             "Use default values for all options."
           ]
         },
@@ -162,7 +162,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Overwrite package.json if it already exists."
           ]
         }
@@ -184,7 +184,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "List globally installed packages."
           ]
         }
@@ -312,7 +312,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "output the version number."
       ]
     }
@@ -324,7 +324,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help."
       ]
     }
