--- a/completions/nvm/language/en-US.json
+++ b/completions/nvm/language/en-US.json
@@ -168,7 +168,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help."
       ]
     }
