--- a/completions/pip/language/en-US.json
+++ b/completions/pip/language/en-US.json
@@ -135,7 +135,7 @@
             "-U"
           ],
           "tip": [
-            "U: -U|--upgrade\n",
+            "U: -U, --upgrade\n",
             "Upgrade all specified packages to the newest available version.\n",
             "The handling of dependencies depends on the upgrade-strategy used."
           ]
@@ -162,7 +162,7 @@
             "-I"
           ],
           "tip": [
-            "U: -I|--ignore-installed\n",
+            "U: -I, --ignore-installed\n",
             "Ignore the installed packages, overwriting them.\n",
             "This can break your system if the existing package is of a different version or was installed with a different package manager!"
           ]
@@ -1141,7 +1141,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help."
       ]
     },
@@ -1177,7 +1177,7 @@
         "-v"
       ],
       "tip": [
-        "U: -v|--verbose\n",
+        "U: -v, --verbose\n",
         "Give more output. Option is additive, and can be used up to 3 times."
       ]
     },
@@ -1187,7 +1187,7 @@
         "-q"
       ],
       "tip": [
-        "U: -q|--quiet\n",
+        "U: -q, --quiet\n",
         "Give less output. Option is additive, and can be used up to 3 times.\n",
         "(corresponding to WARNING, ERROR, and CRITICAL logging levels)."
       ]
@@ -1432,7 +1432,7 @@
       "Links to VCS project URLs are not supported."
     ],
     "__local": [
-      "U: -l|--local\n",
+      "U: -l, --local\n",
       "If in a virtualenv that has global access, do not list globally-installed packages."
     ],
     "__user": "Only output packages installed in user-site.",
