--- a/completions/pip/language/zh-CN.json
+++ b/completions/pip/language/zh-CN.json
@@ -135,7 +135,7 @@
             "-U"
           ],
           "tip": [
-            "U: -U|--upgrade\n",
+            "U: -U, --upgrade\n",
             "将所有指定的软件包升级到最新的可用版本\n",
             "依赖项的处理取决于所使用的升级策略"
           ]
@@ -162,7 +162,7 @@
             "-I"
           ],
           "tip": [
-            "U: -I|--ignore-installed\n",
+            "U: -I, --ignore-installed\n",
             "忽略已安装的软件包, 覆盖它们\n",
             "如果现有软件包是不同的版本或使用不同的软件包管理器安装的, 这可能会破坏您的系统"
           ]
@@ -1141,7 +1141,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息。"
       ]
     },
@@ -1177,7 +1177,7 @@
         "-v"
       ],
       "tip": [
-        "U: -v|--verbose\n",
+        "U: -v, --verbose\n",
         "提供更多输出。选项是累加的, 最多可以使用 3 次。"
       ]
     },
@@ -1187,7 +1187,7 @@
         "-q"
       ],
       "tip": [
-        "U: -q|--quiet\n",
+        "U: -q, --quiet\n",
         "减少输出。选项是累加的, 最多可以使用 3 次。\n",
         "(对应于 WARNING、ERROR 和 CRITICAL 日志级别)。"
       ]
@@ -1432,7 +1432,7 @@
       "不支持 VCS 项目 URL 的链接。"
     ],
     "__local": [
-      "U: -l|--local\n",
+      "U: -l, --local\n",
       "如果在具有全局访问权限的虚拟环境中, 则不列出全局安装的包。"
     ],
     "__user": "仅输出在用户站点中安装的包。",
