--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -46,7 +46,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Add a package globally"
           ]
         },
@@ -56,7 +56,7 @@
             "-P"
           ],
           "tip": [
-            "U: -P|--save-prod\n",
+            "U: -P, --save-prod\n",
             "(Default)Install the specified packages as regular dependencies"
           ]
         },
@@ -66,7 +66,7 @@
             "-D"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "Install the specified packages as devDependencies"
           ]
         },
@@ -76,7 +76,7 @@
             "-O"
           ],
           "tip": [
-            "U: -O|--save-optional\n",
+            "U: -O, --save-optional\n",
             "Install the specified packages as optionalDependencies"
           ]
         },
@@ -86,7 +86,7 @@
             "-E"
           ],
           "tip": [
-            "U: -E|--save-exact\n",
+            "U: -E, --save-exact\n",
             "Saved dependencies will be configured with an exact version rather than using pnpm's default semver range operator"
           ]
         },
@@ -123,7 +123,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Remove globally"
           ]
         }
@@ -145,7 +145,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "List globally"
           ]
         }
@@ -169,7 +169,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Update globally"
           ]
         }
@@ -356,7 +356,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "Print this help message"
       ]
     },
@@ -366,7 +366,7 @@
         "-v"
       ],
       "tip": [
-        "U: --version|-v\n",
+        "U: --version, -v\n",
         "Print the current version of pnpm"
       ]
     }
