--- a/completions/pnpm/language/zh-CN.json
+++ b/completions/pnpm/language/zh-CN.json
@@ -46,7 +46,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局添加一个包"
           ]
         },
@@ -56,7 +56,7 @@
             "-P"
           ],
           "tip": [
-            "U: -P|--save-prod\n",
+            "U: -P, --save-prod\n",
             "(默认)将指定的包作为常规依赖安装"
           ]
         },
@@ -66,7 +66,7 @@
             "-D"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "将指定的包作为开发依赖安装"
           ]
         },
@@ -76,7 +76,7 @@
             "-O"
           ],
           "tip": [
-            "U: -O|--save-optional\n",
+            "U: -O, --save-optional\n",
             "将指定的包作为可选依赖安装"
           ]
         },
@@ -86,7 +86,7 @@
             "-E"
           ],
           "tip": [
-            "U: -E|--save-exact\n",
+            "U: -E, --save-exact\n",
             "保存的依赖将使用精确版本而不是 pnpm 的默认 semver 范围运算符"
           ]
         },
@@ -123,7 +123,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局删除"
           ]
         }
@@ -145,7 +145,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局列出"
           ]
         }
@@ -169,7 +169,7 @@
             "-g"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局更新"
           ]
         }
@@ -356,7 +356,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "显示帮助信息"
       ]
     },
@@ -366,7 +366,7 @@
         "-v"
       ],
       "tip": [
-        "U: --version|-v\n",
+        "U: --version, -v\n",
         "打印 pnpm 的版本号"
       ]
     }
