--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -255,7 +255,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Install application Globally"
           ]
         },
@@ -265,7 +265,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "Install application without updating Scoop"
           ]
         },
@@ -275,7 +275,7 @@
             "--no-cache"
           ],
           "tip": [
-            "U: -k|--no-cache\n",
+            "U: -k, --no-cache\n",
             "Don't use download cache"
           ]
         },
@@ -285,7 +285,7 @@
             "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip-hash-check\n",
+            "U: -s, --skip-hash-check\n",
             "Skip hash verification"
           ]
         },
@@ -325,7 +325,7 @@
             "--independent"
           ],
           "tip": [
-            "U: -i|--independent\n",
+            "U: -i, --independent\n",
             "Don't auto install dependencies"
           ]
         }
@@ -345,7 +345,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Uninstall application Globally"
           ]
         },
@@ -355,7 +355,7 @@
             "--purge"
           ],
           "tip": [
-            "U: -p|--purge\n",
+            "U: -p, --purge\n",
             "Remove persistent data under the persist directory"
           ]
         }
@@ -384,7 +384,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "Update all applications (alternative to *)"
           ]
         },
@@ -394,7 +394,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Force update even if no new versions"
           ]
         },
@@ -404,7 +404,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Update installed applications globally"
           ]
         },
@@ -414,7 +414,7 @@
             "--no-cache"
           ],
           "tip": [
-            "U: -k|--no-cache\n",
+            "U: -k, --no-cache\n",
             "Don't use download cache"
           ]
         },
@@ -424,7 +424,7 @@
             "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip-hash-check\n",
+            "U: -s, --skip-hash-check\n",
             "Skip hash verification"
           ]
         },
@@ -434,7 +434,7 @@
             "--independent"
           ],
           "tip": [
-            "U: -i|--independent\n",
+            "U: -i, --independent\n",
             "Don't auto install dependencies"
           ]
         },
@@ -444,7 +444,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "Hide irrelevant messages"
           ]
         }
@@ -551,7 +551,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "Clean up all applications (alternative to *)"
           ]
         },
@@ -561,7 +561,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Clean up installed applications globally"
           ]
         },
@@ -571,7 +571,7 @@
             "--cache"
           ],
           "tip": [
-            "U: -k|--cache\n",
+            "U: -k, --cache\n",
             "Remove outdated download cache"
           ]
         }
@@ -1159,7 +1159,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Disable updates for a specified app globally"
           ]
         }
@@ -1179,7 +1179,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "Enable updates for a specified app globally"
           ]
         }
@@ -1199,7 +1199,7 @@
             "--config"
           ],
           "tip": [
-            "U: -c|--config\n",
+            "U: -c, --config\n",
             "Include Scoop's configuration in the export"
           ]
         }
@@ -1236,7 +1236,7 @@
             "--local"
           ],
           "tip": [
-            "U: -l|--local\n",
+            "U: -l, --local\n",
             "Check the status of locally installed apps only and disable remote fetching/checking of Scoop and buckets"
           ]
         }
@@ -1266,7 +1266,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "Only download without updating Scoop if there's an update available"
           ]
         },
@@ -1276,7 +1276,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "Force the download and overwrite the download cache"
           ]
         },
@@ -1339,7 +1339,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "Check all installed apps"
           ]
         },
@@ -1349,7 +1349,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "Only check without updating Scoop if there's an update available"
           ]
         },
@@ -1359,7 +1359,7 @@
             "--scan"
           ],
           "tip": [
-            "U: -s|--scan\n",
+            "U: -s, --scan\n",
             "Submit download URLs for analysis (and future retrieval) for packages without VirusTotal information\n",
             "This requires configuring virustotal_api_key"
           ]
@@ -1370,7 +1370,7 @@
             "--no-depends"
           ],
           "tip": [
-            "U: -n|--no-depends\n",
+            "U: -n, --no-depends\n",
             "By default, it also checks all dependencies. This option bypasses it"
           ]
         },
@@ -1380,7 +1380,7 @@
             "--passthru"
           ],
           "tip": [
-            "U: -p|--passthru\n",
+            "U: -p, --passthru\n",
             "Return the reports as objects"
           ]
         }
@@ -1409,7 +1409,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Show Scoop version and the latest commit information of the buckets"
       ]
     }
@@ -1421,7 +1421,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show command help"
       ]
     }
