--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -254,7 +254,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局安装应用程序"
           ]
         },
@@ -264,7 +264,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "安装应用程序而不更新 Scoop"
           ]
         },
@@ -274,7 +274,7 @@
             "--no-cache"
           ],
           "tip": [
-            "U: -k|--no-cache\n",
+            "U: -k, --no-cache\n",
             "不使用下载缓存"
           ]
         },
@@ -284,7 +284,7 @@
             "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip-hash-check\n",
+            "U: -s, --skip-hash-check\n",
             "跳过哈希验证"
           ]
         },
@@ -324,7 +324,7 @@
             "--independent"
           ],
           "tip": [
-            "U: -i|--independent\n",
+            "U: -i, --independent\n",
             "不自动安装依赖项"
           ]
         }
@@ -344,7 +344,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局卸载应用程序"
           ]
         },
@@ -354,7 +354,7 @@
             "--purge"
           ],
           "tip": [
-            "U: -p|--purge\n",
+            "U: -p, --purge\n",
             "在 persist 目录下删除持久数据"
           ]
         }
@@ -383,7 +383,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "更新所有应用程序(与 * 命令的替代)"
           ]
         },
@@ -393,7 +393,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "即使没有新版本也强制更新"
           ]
         },
@@ -403,7 +403,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局更新已安装的应用程序"
           ]
         },
@@ -413,7 +413,7 @@
             "--no-cache"
           ],
           "tip": [
-            "U: -k|--no-cache\n",
+            "U: -k, --no-cache\n",
             "不使用下载缓存"
           ]
         },
@@ -423,7 +423,7 @@
             "--skip-hash-check"
           ],
           "tip": [
-            "U: -s|--skip-hash-check\n",
+            "U: -s, --skip-hash-check\n",
             "跳过哈希验证"
           ]
         },
@@ -433,7 +433,7 @@
             "--independent"
           ],
           "tip": [
-            "U: -i|--independent\n",
+            "U: -i, --independent\n",
             "不自动安装依赖项"
           ]
         },
@@ -443,7 +443,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "隐藏不相关的消息"
           ]
         }
@@ -550,7 +550,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "清理所有应用程序(与 * 命令的替代)"
           ]
         },
@@ -560,7 +560,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局清理已安装的应用程序"
           ]
         },
@@ -570,7 +570,7 @@
             "--cache"
           ],
           "tip": [
-            "U: -k|--cache\n",
+            "U: -k, --cache\n",
             "移除过时的下载缓存"
           ]
         }
@@ -1157,7 +1157,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "禁用指定应用程序的全局更新"
           ]
         }
@@ -1177,7 +1177,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "启用指定应用程序的全局更新"
           ]
         }
@@ -1197,7 +1197,7 @@
             "--config"
           ],
           "tip": [
-            "U: -c|--config\n",
+            "U: -c, --config\n",
             "在导出中包含 Scoop 的配置"
           ]
         }
@@ -1234,7 +1234,7 @@
             "--local"
           ],
           "tip": [
-            "U: -l|--local\n",
+            "U: -l, --local\n",
             "仅检查本地安装的应用程序的状态, 并禁用 Scoop 和存储库的远程获取/检查"
           ]
         }
@@ -1264,7 +1264,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "如果可用, 仅下载而不更新 Scoop"
           ]
         },
@@ -1274,7 +1274,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "强制下载并覆盖下载缓存"
           ]
         },
@@ -1337,7 +1337,7 @@
             "--all"
           ],
           "tip": [
-            "U: -a|--all\n",
+            "U: -a, --all\n",
             "检查所有已安装的应用程序"
           ]
         },
@@ -1347,7 +1347,7 @@
             "--no-update-scoop"
           ],
           "tip": [
-            "U: -u|--no-update-scoop\n",
+            "U: -u, --no-update-scoop\n",
             "如果可用, 仅检查而不更新 Scoop"
           ]
         },
@@ -1357,7 +1357,7 @@
             "--scan"
           ],
           "tip": [
-            "U: -s|--scan\n",
+            "U: -s, --scan\n",
             "提交下载 URL 进行分析(并用于未来检索)对于没有 VirusTotal 信息的包\n",
             "这需要配置 virustotal_api_key"
           ]
@@ -1368,7 +1368,7 @@
             "--no-depends"
           ],
           "tip": [
-            "U: -n|--no-depends\n",
+            "U: -n, --no-depends\n",
             "默认情况下, 它还会检查所有依赖项。此选项绕过它"
           ]
         },
@@ -1378,7 +1378,7 @@
             "--passthru"
           ],
           "tip": [
-            "U: -p|--passthru\n",
+            "U: -p, --passthru\n",
             "以对象形式返回报告"
           ]
         }
@@ -1407,7 +1407,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "显示 Scoop 版本和存储桶的最新提交信息"
       ]
     }
@@ -1419,7 +1419,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息"
       ]
     }
