--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -73,7 +73,7 @@
             "--current"
           ],
           "tip": [
-            "U: -c|--current\n",
+            "U: -c, --current\n",
             "Show the currently-active tool(s)"
           ]
         },
@@ -83,7 +83,7 @@
             "--default"
           ],
           "tip": [
-            "U: -d|--default\n",
+            "U: -d, --default\n",
             "Show your default tool(s)"
           ]
         },
@@ -254,7 +254,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Print the current version of Volta"
       ]
     }
@@ -266,7 +266,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help"
       ]
     },
