--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -73,7 +73,7 @@
             "--current"
           ],
           "tip": [
-            "U: -c|--current\n",
+            "U: -c, --current\n",
             "显示当前激活的工具"
           ]
         },
@@ -83,7 +83,7 @@
             "--default"
           ],
           "tip": [
-            "U: -d|--default\n",
+            "U: -d, --default\n",
             "显示您的默认工具"
           ]
         },
@@ -254,7 +254,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "打印 Volta 的版本"
       ]
     }
@@ -266,7 +266,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息"
       ]
     },
