--- a/completions/winget/language/en-US.json
+++ b/completions/winget/language/en-US.json
@@ -1744,7 +1744,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Display the version of the tool"
       ]
     },
@@ -1762,7 +1762,7 @@
         "--help"
       ],
       "tip": [
-        "U: -?|--help\n",
+        "U: -?, --help\n",
         "Display help information for the selected command"
       ]
     },
@@ -1778,7 +1778,7 @@
         "--open-logs"
       ],
       "tip": [
-        "U: --logs|--open-logs\n",
+        "U: --logs, --open-logs\n",
         "Open the default log location"
       ]
     },
@@ -1788,7 +1788,7 @@
         "--verbose-logs"
       ],
       "tip": [
-        "U: --verbose|--verbose-logs\n",
+        "U: --verbose, --verbose-logs\n",
         "Enable detailed logging for WinGet"
       ]
     },
@@ -1841,7 +1841,7 @@
       "E: -s winget"
     ],
     "__exact": [
-      "U: -e|--exact\n",
+      "U: -e, --exact\n",
       "Use exact string in the query, including case sensitivity. It won't use substring default behavior"
     ],
     "__scope": [
@@ -1860,12 +1860,12 @@
       "E: --installer-type msi"
     ],
     "__interactive": [
-      "U: -i|--interactive\n",
+      "U: -i, --interactive\n",
       "Run installer in interactive mode.\n",
       "Default experience displays installer progress"
     ],
     "__silent": [
-      "U: -q|--silent\n",
+      "U: -q, --silent\n",
       "Run installer in silent mode.\n",
       "Default experience doesn't display installer progress"
     ],
@@ -1944,7 +1944,7 @@
       "Update package even if its current version cannot be determined"
     ],
     "__pinned": [
-      "U: --pinned|--include-pinned\n",
+      "U: --pinned, --include-pinned\n",
       "Update package even if it has non-blocking package pins"
     ],
     "__file": [
