--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -106,7 +106,7 @@
             "--online"
           ],
           "tip": [
-            "U: -o|--online\n",
+            "U: -o, --online\n",
             "Show a list of available distributions that can be installed"
           ]
         },
@@ -129,7 +129,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "Show only distribution names"
           ]
         },
@@ -139,7 +139,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "Show detailed information for all distributions"
           ]
         }
@@ -353,7 +353,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Check version information about WSL and its components"
       ]
     },
