--- a/completions/wsl/language/zh-CN.json
+++ b/completions/wsl/language/zh-CN.json
@@ -106,7 +106,7 @@
             "--online"
           ],
           "tip": [
-            "U: -o|--online\n",
+            "U: -o, --online\n",
             "显示可以安装的发行版的列表"
           ]
         },
@@ -128,7 +128,7 @@
             "--quiet"
           ],
           "tip": [
-            "U: -q|--quiet\n",
+            "U: -q, --quiet\n",
             "只显示发行版名称"
           ]
         },
@@ -138,7 +138,7 @@
             "--verbose"
           ],
           "tip": [
-            "U: -v|--verbose\n",
+            "U: -v, --verbose\n",
             "显示所有发行版的详细信息"
           ]
         }
@@ -349,7 +349,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "检查有关 WSL 及其组件的版本信息"
       ]
     },
