--- a/completions/wt/language/en-US.json
+++ b/completions/wt/language/en-US.json
@@ -167,7 +167,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Display the version"
       ]
     }
@@ -179,7 +179,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Print this help message and exit"
       ]
     }
