--- a/completions/wt/language/zh-CN.json
+++ b/completions/wt/language/zh-CN.json
@@ -167,7 +167,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "显示 wt 的版本信息"
       ]
     }
@@ -179,7 +179,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息"
       ]
     }
