--- a/completions/yarn/language/en-US.json
+++ b/completions/yarn/language/en-US.json
@@ -269,7 +269,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "Displays the version of Yarn"
       ]
     }
@@ -281,7 +281,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Displays help information"
       ]
     },
@@ -335,7 +335,7 @@
         "--enable-pnp"
       ],
       "tip": [
-        "U: --pnp|--enable-pnp\n",
+        "U: --pnp, --enable-pnp\n",
         "Enable Plug'n'Play (PnP) mode."
       ]
     },
@@ -423,7 +423,7 @@
         "--production"
       ],
       "tip": [
-        "U: --prod|--production\n",
+        "U: --prod, --production\n",
         "Only install production dependencies."
       ]
     },
@@ -515,7 +515,7 @@
         "--silent"
       ],
       "tip": [
-        "U: -s|--silent\n",
+        "U: -s, --silent\n",
         "Silent mode, disable logs."
       ]
     },
