--- a/completions/yarn/language/zh-CN.json
+++ b/completions/yarn/language/zh-CN.json
@@ -269,7 +269,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "显示 Yarn 的版本号"
       ]
     }
@@ -281,7 +281,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息"
       ]
     },
@@ -335,7 +335,7 @@
         "--enable-pnp"
       ],
       "tip": [
-        "U: --pnp|--enable-pnp\n",
+        "U: --pnp, --enable-pnp\n",
         "启用 Plug'n'Play (PnP) 模式。"
       ]
     },
@@ -423,7 +423,7 @@
         "--production"
       ],
       "tip": [
-        "U: --prod|--production\n",
+        "U: --prod, --production\n",
         "仅安装生产依赖项。"
       ]
     },
@@ -515,7 +515,7 @@
         "--silent"
       ],
       "tip": [
-        "U: -s|--silent\n",
+        "U: -s, --silent\n",
         "静默模式, 禁用日志。"
       ]
     },
