--- a/completions/conda/language/zh-CN.json
+++ b/completions/conda/language/zh-CN.json
@@ -142,7 +142,7 @@
         "-V"
       ],
       "tip": [
-        "U: --version|-V\n",
+        "U: --version, -V\n",
         "显示 conda 版本号。"
       ]
     }
@@ -154,7 +154,7 @@
         "-h"
       ],
       "tip": [
-        "U: --help|-h\n",
+        "U: --help, -h\n",
         "显示帮助信息。"
       ]
     },
@@ -164,7 +164,7 @@
         "-v"
       ],
       "tip": [
-        "U: --verbose|-v",
+        "U: --verbose, -v",
         "可多次使用。\n",
         "一次用于详细输出, 两次用于 INFO 日志记录, 三次用于 DEBUG 日志记录, 四次用于 TRACE 日志记录"
       ]
