--- a/completions/docker/language/en-US.json
+++ b/completions/docker/language/en-US.json
@@ -1310,7 +1310,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help."
       ]
     }
