--- a/completions/docker/language/zh-CN.json
+++ b/completions/docker/language/zh-CN.json
@@ -1310,7 +1310,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息。"
       ]
     }
