--- a/completions/npm/language/zh-CN.json
+++ b/completions/npm/language/zh-CN.json
@@ -17,7 +17,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局安装包"
           ]
         },
@@ -27,7 +27,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "写入 package.json 的 dependencies"
           ]
         },
@@ -37,7 +37,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "写入 package.json 的 devDependencies"
           ]
         }
@@ -57,7 +57,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局卸载包"
           ]
         },
@@ -67,7 +67,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "从 package.json 的 dependencies 中删除"
           ]
         },
@@ -77,7 +77,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "从 package.json 的 devDependencies 中删除"
           ]
         }
@@ -97,7 +97,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "全局更新包"
           ]
         },
@@ -107,7 +107,7 @@
             "--save"
           ],
           "tip": [
-            "U: -S|--save\n",
+            "U: -S, --save\n",
             "更新 package.json 的 dependencies"
           ]
         },
@@ -117,7 +117,7 @@
             "--save-dev"
           ],
           "tip": [
-            "U: -D|--save-dev\n",
+            "U: -D, --save-dev\n",
             "更新 package.json 的 devDependencies"
           ]
         }
@@ -152,7 +152,7 @@
             "--yes"
           ],
           "tip": [
-            "U: -y|--yes\n",
+            "U: -y, --yes\n",
             "对所有选项使用默认值"
           ]
         },
@@ -162,7 +162,7 @@
             "--force"
           ],
           "tip": [
-            "U: -f|--force\n",
+            "U: -f, --force\n",
             "如果 package.json 已存在, 直接覆盖它"
           ]
         }
@@ -184,7 +184,7 @@
             "--global"
           ],
           "tip": [
-            "U: -g|--global\n",
+            "U: -g, --global\n",
             "列出全局已安装的软件包"
           ]
         }
@@ -312,7 +312,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "输出版本号"
       ]
     }
@@ -324,7 +324,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息。"
       ]
     }
