--- a/completions/nrm/language/en-US.json
+++ b/completions/nrm/language/en-US.json
@@ -120,7 +120,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "Show help."
       ]
     }
