--- a/completions/nvm/language/zh-CN.json
+++ b/completions/nvm/language/zh-CN.json
@@ -168,7 +168,7 @@
         "--help"
       ],
       "tip": [
-        "U: -h|--help\n",
+        "U: -h, --help\n",
         "显示帮助信息。"
       ]
     }
