--- a/completions/winget/language/zh-CN.json
+++ b/completions/winget/language/zh-CN.json
@@ -1744,7 +1744,7 @@
         "--version"
       ],
       "tip": [
-        "U: -v|--version\n",
+        "U: -v, --version\n",
         "打印 winget 的版本"
       ]
     },
@@ -1762,7 +1762,7 @@
         "--help"
       ],
       "tip": [
-        "U: -?|--help\n",
+        "U: -?, --help\n",
         "显示帮助信息"
       ]
     },
@@ -1778,7 +1778,7 @@
         "--open-logs"
       ],
       "tip": [
-        "U: --logs|--open-logs\n",
+        "U: --logs, --open-logs\n",
         "打开默认日志位置"
       ]
     },
@@ -1788,7 +1788,7 @@
         "--verbose-logs"
       ],
       "tip": [
-        "U: --verbose|--verbose-logs\n",
+        "U: --verbose, --verbose-logs\n",
         "为 winget 启用详细日志记录"
       ]
     },
@@ -1841,7 +1841,7 @@
       "E: -s winget"
     ],
     "__exact": [
-      "U: -e|--exact\n",
+      "U: -e, --exact\n",
       "在查询中使用精确字符串, 包括大小写敏感性。它不会使用默认的子字符串行为"
     ],
     "__scope": [
@@ -1860,12 +1860,12 @@
       "E: --installer-type msi"
     ],
     "__interactive": [
-      "U: -i|--interactive\n",
+      "U: -i, --interactive\n",
       "以交互模式运行安装程序。\n",
       "默认体验显示安装程序进度"
     ],
     "__silent": [
-      "U: -q|--silent\n",
+      "U: -q, --silent\n",
       "以静默模式运行安装程序。\n",
       "默认体验不显示安装程序进度"
     ],
@@ -1944,7 +1944,7 @@
       "即使当前版本无法确定, 也更新包"
     ],
     "__pinned": [
-      "U: --pinned|--include-pinned\n",
+      "U: --pinned, --include-pinned\n",
       "即使有非阻塞的包固定, 也更新包"
     ],
     "__file": [
